--- a/css/media-querys.css
+++ b/css/media-querys.css
@@ -14,7 +14,9 @@
     justify-content: space-between;
     position: relative;
   }
+
   #mobile-ul.active {
+    display: block;
     right: -2.2rem;
   }
 }
